--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,10 @@ pool:
 
 strategy:
   matrix:
-    node_12_x:
-      node_version: 12.x
-    node_14_x:
-      node_version: 14.x
-    node_16_x:
+    node_18_x:
       node_version: 16.x
+    node_20_x:
+      node_version: 20.x
 
 steps:
   - task: NodeTool@0
@@ -30,12 +28,12 @@ steps:
   - bash: npm run build
     displayName: Lint and Build TypeScript
 
-  - bash: npm run test:report && npm run test:reporter
+  - bash: npm run test:coverage
     displayName: Test
 
   - task: PublishTestResults@2
     displayName: "Publish Test Results"
     condition: succeededOrFailed()
     inputs:
-      testResultsFiles: "junit-testresults.xml"
+      testResultsFiles: "lcov.info"
       testRunTitle: TestRun $(node_version)
