--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "qs-to-mongo",
   "version": "3.0.0",
   "description": "Convert query string parameters into mongo query filter and options.",
-  "main": "./lib",
-  "types": "./lib",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "author": "Maksim Sinik <maksim@sinik.it>",
   "license": "MIT",
+  "type": "commonjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "prebuild": "npm run lint && npm run clean-build",
     "build": "tsc",
-    "clean-build": "rimraf ./lib && mkdir lib",
+    "clean-build": "rimraf ./dist && mkdir dist",
     "update": "npx npm-check -u",
-    "prettier": "prettier --loglevel warn --write \"src/**/*.{ts,tsx}\"",
-    "prelint": "npm run prettier",
-    "lint": "tslint --fix -c tslint.json -t stylish -p ./tsconfig.json",
+    "lint": "biome check --apply .",
     "prepublishOnly": "npm run build",
-    "test": "tap test/**/*.ts",
-    "test:watch": "chokidar \"src/**/*.ts\" \"test/**/*.ts\" -c \"npm run test\" --initial",
-    "test:report": "npm run test | tee out.tap",
-    "test:reporter": "tap-mocha-reporter xunit < out.tap > junit-testresults.xml"
+    "test": "tsx --test ./test/*.ts",
+    "test:watch": "tsx watch --test ./test/*.ts",
+    "test:coverage": "c8 --all --src src --reporter lcov --reporter text tsx --test ./test/*.ts"
   },
   "repository": {
     "type": "git",
@@ -41,23 +46,16 @@
   },
   "homepage": "https://github.com/fox1t/qs-to-mongo#readme",
   "devDependencies": {
-    "@types/node": "~11.13.8",
+    "@biomejs/biome": "^1.7.3",
+    "@types/node": "^20.12.12",
     "@types/qs": "^6.9.7",
-    "chokidar-cli": "^3.0.0",
-    "husky": "~2.1.0",
-    "prettier": "^2.5.1",
+    "c8": "^9.1.0",
+    "husky": "^2.1.0",
     "rimraf": "^3.0.2",
-    "tap": "~13.1.1",
-    "tap-mocha-reporter": "~4.0.1",
-    "ts-node": "~8.1.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "~1.18.0",
-    "typescript": "^4.5.5"
+    "tsx": "^4.10.4",
+    "typescript": "^5.4.5"
   },
-  "files": [
-    "/lib",
-    "/typings"
-  ],
+  "files": ["/lib", "/typings"],
   "husky": {
     "hooks": {
       "pre-commit": "npm run test && npm run build"
@@ -67,7 +65,8 @@
     "test": "test"
   },
   "dependencies": {
-    "bson-objectid": "^2.0.2",
-    "qs": "^6.10.3"
+    "bson-objectid": "^2.0.4",
+    "qs": "^6.12.1",
+    "tslib": "^2.6.2"
   }
 }
