--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,24 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "declaration": true,
-    "target": "es2017",
-    "module": "commonjs",
-    "outDir": "lib",
-    "pretty": true,
-    "noEmitOnError": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "strict": true,
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "outDir": "dist",
     "noImplicitAny": false,
+    "declaration": true,
+    "importHelpers": true,
     "esModuleInterop": true,
+    "strict": true,
+    "resolveJsonModule": true,
     "removeComments": true,
+    "newLine": "lf",
     "noUnusedLocals": true,
-    "lib": [
-      "esnext"
-    ],
-    "typeRoots" : ["./node_modules/@types", "./typings"]
+    "noFallthroughCasesInSwitch": true,
+    "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "lib": ["ESNext"]
   },
-  "formatCodeOptions": {
-    "identSize": 2,
-    "tabSize": 2
-  },
-  "exclude": ["node_modules"],
   "include": ["./src/**/*.ts"]
 }
