--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,9 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.7.3/schema.json",
-  "files": {
-    "ignore": ["dist/**/*.js"]
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
   },
   "formatter": {
     "enabled": true,
